vemo-app/main/default/objects/PaymentInstruction__c/PaymentInstruction__c.object-meta.xml
<CustomObject>
    <label>Payment Instruction</label>
    <nameField>
        <displayFormat>PI-{00000000}</displayFormat>
        <label>Payment Instruction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Instructions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>