vemo-app/main/default/objects/PaymentInstruction__c/fields/Allocate__c.field-meta.xml
<CustomField>
    <fullName>Allocate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to allocate the payment manually</inlineHelpText>
    <label>Allocate</label>
    <type>Checkbox</type>
</CustomField>