vemo-app/main/default/objects/PaymentInstruction__c/fields/AmountAllocated__c.field-meta.xml
<CustomField>
    <fullName>AmountAllocated__c</fullName>
    <inlineHelpText>Sum of the Payment Allocations for this Payment Instruction.</inlineHelpText>
    <label>Amount Allocated</label>
    <summarizedField>PaymentAllocation__c.AmountAllocated__c</summarizedField>
    <summaryForeignKey>PaymentAllocation__c.PaymentInstruction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>