vemo-app/main/default/objects/PaymentInstruction__c/fields/AmountPosted__c.field-meta.xml
<CustomField>
    <fullName>AmountPosted__c</fullName>
    <inlineHelpText>The Posted amount of the Payment Instruction.</inlineHelpText>
    <label>Amount Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>