vemo-app/main/default/objects/PaymentInstruction__c/fields/DATA__c.field-meta.xml
<CustomField>
    <fullName>DATA__c</fullName>
    <label>DATA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>