vemo-app/main/default/objects/PaymentInstruction__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>The date of the Payment Instruction.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>