vemo-app/main/default/objects/PaymentInstruction__c/fields/DatePosted__c.field-meta.xml
<CustomField>
    <fullName>DatePosted__c</fullName>
    <inlineHelpText>The date the Payment Instruction posted.</inlineHelpText>
    <label>Date Posted</label>
    <type>Date</type>
</CustomField>