vemo-app/main/default/objects/PaymentInstruction__c/fields/DestinationPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>DestinationPaymentMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If Transaction Direction is Outbound, indicates the related Payment Method.</inlineHelpText>
    <label>Destination Payment Method</label>
    <referenceTo>PaymentMethod__c</referenceTo>
    <relationshipLabel>Payment Instructions (Destination Payment Method)</relationshipLabel>
    <relationshipName>Payment_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>