vemo-app/main/default/objects/PaymentInstruction__c/fields/FullyAllocated__c.field-meta.xml
<CustomField>
    <fullName>FullyAllocated__c</fullName>
    <formula>IF( AmountAllocated__c =  Amount__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if Amount Allocated is equal to Amount.</inlineHelpText>
    <label>Fully Allocated</label>
    <type>Checkbox</type>
</CustomField>