vemo-app/main/default/objects/PaymentInstruction__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Payment Method related to this Payment Instruction.</inlineHelpText>
    <label>Payment Method</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Payment Method selected must match the Student of the Scheduled Payment</errorMessage>
        <filterItems>
            <field>PaymentMethod__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Student__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PaymentMethod__c</referenceTo>
    <relationshipLabel>Payment Instructions (Payment Method)</relationshipLabel>
    <relationshipName>Scheduled_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>