vemo-app/main/default/objects/PaymentInstruction__c/fields/TransactionDirection__c.field-meta.xml
<CustomField>
    <fullName>TransactionDirection__c</fullName>
    <inlineHelpText>Inbound (from Student to Vemo) or Outbound (from Vemo to Student).</inlineHelpText>
    <label>Transaction Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TransactionDirection</valueSetName>
    </valueSet>
</CustomField>