vemo-app/main/default/objects/PaymentInstruction__c/fields/VemoAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>VemoAccountNumber__c</fullName>
    <formula>Student__r.VemoAccountNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vemo Account Number</label>
    <type>Text</type>
</CustomField>