vemo-app/main/default/objects/PaymentInstruction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>PaymentMethod__c</columns>
    <columns>Date__c</columns>
    <columns>ScheduledDate__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>AmountAllocated__c</columns>
    <columns>DatePosted__c</columns>
    <columns>AmountPosted__c</columns>
    <columns>RemainingAllocation__c</columns>
    <columns>TransactionDirection__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>